--- a/app/assets/templates/posts/indexItem.jst.ejs
+++ b/app/assets/templates/posts/indexItem.jst.ejs
@@ -1,1 +1,2 @@
-<%= post.escape("title") %>
+<h4 class='post-title'><%= post.escape("title") %></h4>
+<div class='post-popularity'>Popularity: <%= post.escape("popularity") %></div>
