--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
+  <div class="container-fluid">
     <ul class="nav navbar-nav navbar-left">
-      <h4>TenGigg</h4>
+      <a class="navbar-brand" href="<%= root_url %>">TenGigg</a>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <% if logged_in? %>
@@ -23,5 +23,4 @@
       <% end %>
       </li>
     </ul>
-  </div>
 </nav>
