--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,16 @@
-<h2>Sign Up</h2>
-<form action='<%= users_url %>' method='post' class='sign-up-form'>
-	<%= auth_token %>
-	<label>Username:
-		<input type='text' name='user[username]'>
-	</label><br>
-	<label>Password:
-		<input type='password' name='user[password]'>
-	</label><br>
-	<input type='submit' value='Sign Up' class='sign-up-btn'>
-</form>
+<div class="form-container">
+	<form action='<%= users_url %>' method='post' class='auth-form'>
+		<%= auth_token %>
+		<h3>Sign Up</h3>
+		<div class="form-group">
+			<input type='text' class='form-control' placeholder='Username'
+				aria-describedby='basic-addon1' name='user[username]'>
+		</div>
+
+		<div class="form-group">
+			<input type='password' class='form-control' placeholder='Password'
+				aria-describedby='basic-addon1' name='user[password]'>
+		</div>
+		<input type='submit' value='Sign Up' class='auth-btn'>
+	</form>
+</div>
