--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,21 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+
+  <script type="text/javascript">
+    <% if logged_in? %>
+      window.username = "<%= current_user.username %>"
+    <% else %>
+      window.username = "Account"
+    <% end %>
+  </script>
 </head>
 <body>
 
-  <%= render partial: "layouts/header" %>
   <br><br>
   <%= yield %>
+
+
 
 </body>
 </html>
