--- a/app/assets/templates/nav_bar.jst.ejs
+++ b/app/assets/templates/nav_bar.jst.ejs
@@ -7,6 +7,13 @@
 
     <ul class="nav navbar-nav navbar-right">
       <% if (window.username !== "Account") { %>
+        <!-- Submit Button (placeholder rails view to submit new post, change to modal) -->
+        <li>
+          <a href="/posts/new" class='new-post'>Submit</a>
+          <!-- <button type="button" class="btn btn-primary">Submit</button> -->
+        </li>
+
+        <!-- Account Dropdown (logged in) -->
         <li>
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
           aria-haspopup="true" aria-expanded="false"><%= window.username %>
@@ -16,7 +23,9 @@
             <!-- <li><a href="#" class="profile">Profile</a></li> -->
           </ul>
         </li>
+
       <% } else { %>
+        <!-- Account Dropdown (not logged in) -->
         <li>
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
           aria-haspopup="true" aria-expanded="false"><%= window.username %>
