--- a/app/assets/templates/nav_bar.jst.ejs
+++ b/app/assets/templates/nav_bar.jst.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <ul class="nav navbar-nav navbar-left">
       <!-- Main Logo/Index -->
@@ -21,6 +21,7 @@
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
+    
       <% if (window.username !== "Account") { %>
 
         <!-- Submit Button (change to modal) -->
