Set up figaro/cloudinary

--- a/app/assets/templates/posts/post_form.jst.ejs
+++ b/app/assets/templates/posts/post_form.jst.ejs
@@ -4,5 +4,6 @@
   <input type="text" name="post[title]" placeholder="Title"><br><br>
   <input type="text" name="post[popularity]" placeholder="Popularity"> <!-- Change to URL... -->
   <br><br>
+  <button class='upload-button'>Upload Image</button>
   <input type="submit" value="Submit Post!">
 </form>
