--- a/app/assets/templates/posts/post_form.jst.ejs
+++ b/app/assets/templates/posts/post_form.jst.ejs
@@ -4,6 +4,13 @@
   <input type="text" name="post[title]" placeholder="Title"><br><br>
   <input type="text" name="post[popularity]" placeholder="Popularity"> <!-- Change to URL... -->
   <br><br>
+
+  <div class="thumb-container">
+    <h5>Image:</h5>
+  </div>
+
   <button class='upload-button'>Upload Image</button>
+
   <input type="submit" value="Submit Post!">
+
 </form>
