--- a/app/assets/templates/nav_bar.jst.ejs
+++ b/app/assets/templates/nav_bar.jst.ejs
@@ -6,22 +6,18 @@
       <!-- Sort by Recent -->
       <li class='recentIndex'><a class='recent' href="#/">Recent</a></li>
       <!-- Categories Dropdown -->
-      <li>
+      <li class='categories'>
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
         aria-haspopup="true" aria-expanded="false">Categories
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li>
-
-          <!-- CATEGORY NAMES HERE -->
-
-          </li>
+          <!-- Categories here -->
         </ul>
       </li>
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
-    
+
       <% if (window.username !== "Account") { %>
 
         <!-- Submit Button (change to modal) -->
