Refactor categories dropdown

--- a/app/assets/templates/nav_bar.jst.ejs
+++ b/app/assets/templates/nav_bar.jst.ejs
@@ -11,7 +11,10 @@
         aria-haspopup="true" aria-expanded="false">Categories
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <!-- Categories here -->
+          <% categories.each(function (category) { %>
+            <li><a href="#<%= category.escape('name') %>/posts">
+            <%= category.escape('name') %></a></li>
+          <% }); %>
         </ul>
       </li>
     </ul>
