--- a/app/assets/templates/posts/post_show.jst.ejs
+++ b/app/assets/templates/posts/post_show.jst.ejs
@@ -1,8 +1,9 @@
 <div class="post-show">
 
   <h2><%= post.escape('title') %></h2>
-  <h3>Posted by: <%= post.user %></h3>
+  <h3>Posted by: <%= post.attributes.user.get('username') %></h3>
 
+  <h4>Categories: <%= post.attributes.categories %></h4>
 
   <% if (post.image) { %>
     <img
