--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,7 +73,7 @@ ul.posts {
 }
 
 .post-popularity {
-  font-size: 10px;
+  font-size: 12px;
 }
 
 ul.category-select {
@@ -84,20 +84,6 @@ ul.category-select {
   column-count: 2;
   column-gap: 20px;
 }
-
-//
-// ul.category-select li {
-//   width: 125px;
-//   display: inline-block;
-//   float: left;
-// }
-//
-// ul.category-select li:nth-of-type(n+4) {
-//   width: 125px;
-//   display: inline-block;
-//   float: right;
-//
-// }
 
 .m-background {
   background-color: rgba(50, 50, 50, 0.5);
@@ -118,6 +104,7 @@ ul.category-select {
   padding: 2pc;
   border: 1px solid;
   z-index: 99;
-  top: 25%;
-  left: 25%;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
 }
