--- a/app/assets/templates/posts/post_form.jst.ejs
+++ b/app/assets/templates/posts/post_form.jst.ejs
@@ -12,7 +12,7 @@
     </div><br>
 
     <button class='upload-button'>Upload Image</button><br></br>
-    <h4>Categories:</h4>
+    <h4>Categories, select up to three:</h4>
     <ul class="category-select">
       <% TenGigg.categories.each(function (category) { %>
         <li><input type="checkbox" name="category_ids[]" class="category"
