More comment functionality, some styling

--- a/app/assets/templates/nav_bar.jst.ejs
+++ b/app/assets/templates/nav_bar.jst.ejs
@@ -12,7 +12,7 @@
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <% TenGigg.categories.each(function (category) { %>
-            <li><a href="#<%= category.escape('name') %>/posts">
+            <li class='dropdown-item'><a href="#<%= category.escape('name') %>/posts">
             <%= category.escape('name') %></a></li>
           <% }); %>
         </ul>
@@ -34,7 +34,7 @@
           aria-haspopup="true" aria-expanded="false"><%= window.username %>
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="javascript:void(0)" class="sign-out">Sign Out</a></li>
+            <li class='dropdown-item'><a href="javascript:void(0)" class="sign-out">Sign Out</a></li>
             <!-- <li><a href="#" class="profile">Profile</a></li> -->
           </ul>
         </li>
@@ -46,8 +46,8 @@
           aria-haspopup="true" aria-expanded="false"><%= window.username %>
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/session/new" class="sign-in">Log In</a></li>
-            <li><a href="/users/new" class="sign-up">Sign Up</a></li>
+            <li class='dropdown-item'><a href="/session/new" class="sign-in">Log In</a></li>
+            <li class='dropdown-item'><a href="/users/new" class="sign-up">Sign Up</a></li>
           </ul>
         </li>
         <% } %>
