--- a/app/assets/templates/posts/index.jst.ejs
+++ b/app/assets/templates/posts/index.jst.ejs
@@ -1,11 +1,6 @@
-<div class="posts-index-title">
-  <br>
-  <h4>Hot Posts</h4>
+<div class='col-sm-1'></div>
+<div class='col-sm-7'>
+	<ul class='posts'></ul>
 </div>
 
-<ul class='posts'>
-
-</ul>
-
-<div class="post-form">
-</div>
+<div class='col-sm-1'></div>
