--- a/app/assets/templates/posts/indexItem.jst.ejs
+++ b/app/assets/templates/posts/indexItem.jst.ejs
@@ -4,3 +4,4 @@
   src="<%= post.image().resizedUrl() %>" alt="" />
 <% } %>
 <div class='post-popularity'>Popularity: <%= post.escape("popularity") %></div>
+<div class='index-item-bumper'></div>
