--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,9 +37,28 @@ ul {
 	background-color: #625D5D;
 }
 
+.dropdown-menu:first-child {
+	padding: 0;
+	padding-top: 10px;
+}
+
+.dropdown-item {
+  height: 30px;
+}
+
+.dropdown-menu > li > a {
+	color: #808080;
+	font-size: 12px;
+	height: 100%;
+	width: 100%;
+	vertical-align: middle;
+	line-height: 2;
+}
+
 ul.posts {
   padding-left: 8px;
   padding-right: 8px;
+  padding-top: 20px;
 }
 
 .form-container {
@@ -58,15 +77,21 @@ ul.posts {
   padding-right: 15px;
 }
 
+a {
+	color: inherit;
+}
+
 .post-index .posts {
   display: block;
-  width: 60%;
+  width: 100%;
   margin: 20px;
-  border: 1px solid gray;
+  border-right: 1px solid #D8D8D8;
 }
 
 .post-index-item {
-  border: 1px solid gray;
+	padding-bottom: 20px;
+	padding-top: 10px;
+  border-bottom: 1px #D8D8D8;
   width: 100%;
   margin-top: 8px;
   margin-bottom: 8px;
@@ -74,6 +99,14 @@ ul.posts {
 
 .post-popularity {
   font-size: 12px;
+}
+
+.index-item-bumper {
+	padding-top: 20px;
+	height: 10px;
+	width: 600px;
+	border-bottom: 1px solid #D8D8D8;
+	z-index: 2;
 }
 
 ul.category-select {
