--- a/app/assets/templates/nav_bar.jst.ejs
+++ b/app/assets/templates/nav_bar.jst.ejs
@@ -25,7 +25,7 @@
 
         <!-- Submit Button (change to modal) -->
         <li>
-          <button id='compose' class="btn-compose btn-primary">Submit</button>
+          <button id='compose' class="btn btn-primary">Submit</button>
         </li>
 
         <!-- Account Dropdown (logged in) -->
