--- a/app/assets/templates/comments/comment.jst.ejs
+++ b/app/assets/templates/comments/comment.jst.ejs
@@ -1,1 +1,6 @@
-<%= comment.escape('body') %>
+<div class="comment-author">
+  <%= author.escape('username') %>:
+</div>
+<div class="comment-body">
+  <%= comment.escape('body') %>
+</div>
