--- a/app/assets/templates/posts/post_show.jst.ejs
+++ b/app/assets/templates/posts/post_show.jst.ejs
@@ -20,9 +20,17 @@
     	<img
     	src="<%= post.image().resizedUrl() %>" alt="" />
   	<% } %>
-  	<div class='post-popularity'>Popularity: <%= post.escape("popularity") %></div>
-  
-	  <div class="comments">
+		<div class="post-stats">
+  		<span class='post-popularity'>Popularity: <%= post.escape("popularity") %></span>
+			<span class='post-comments'>Comments: <%= post.comments().length %></span>
+		</div>
+
+	  <div class="comments-container">
+
+			<ul class="comments">
+			</ul>
   	</div>
+		<!-- Bottom of page bumper... -->
+	<br>
 	</div>
 </div>
