--- a/app/assets/templates/nav_bar.jst.ejs
+++ b/app/assets/templates/nav_bar.jst.ejs
@@ -21,7 +21,7 @@
 
     <ul class="nav navbar-nav navbar-right">
 
-      <% if (window.username !== "Account") { %>
+      <% if (window.TenGigg.CURRENT_USER.username !== "Account") { %>
 
         <!-- Submit Button (change to modal) -->
         <li>
@@ -31,7 +31,7 @@
         <!-- Account Dropdown (logged in) -->
         <li>
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-          aria-haspopup="true" aria-expanded="false"><%= window.username %>
+          aria-haspopup="true" aria-expanded="false"><%= window.TenGigg.CURRENT_USER.username %>
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li class='dropdown-item'><a href="javascript:void(0)" class="sign-out">Sign Out</a></li>
@@ -43,7 +43,7 @@
         <!-- Account Dropdown (not logged in) -->
         <li>
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-          aria-haspopup="true" aria-expanded="false"><%= window.username %>
+          aria-haspopup="true" aria-expanded="false"><%= window.TenGigg.CURRENT_USER.username %>
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li class='dropdown-item'><a href="/session/new" class="sign-in">Log In</a></li>
