--- a/app/assets/templates/nav_bar.jst.ejs
+++ b/app/assets/templates/nav_bar.jst.ejs
@@ -23,9 +23,9 @@
 
       <% if (window.TenGigg.CURRENT_USER.username !== "Account") { %>
 
-        <!-- Submit Button (change to modal) -->
+        <!-- Submit Button -->
         <li>
-          <button id='compose' class="btn btn-primary">Submit</button>
+          <button id='compose' class="btn btn-info">Submit</button>
         </li>
 
         <!-- Account Dropdown (logged in) -->
@@ -40,6 +40,12 @@
         </li>
 
       <% } else { %>
+
+        <!-- Demo Guest Log In -->
+        <!-- <li>
+          <button id='guest' class='btn btn-' name="button">Guest Log In</button>
+        </li> -->
+
         <!-- Account Dropdown (not logged in) -->
         <li>
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
