--- a/app/assets/templates/comments/comment.jst.ejs
+++ b/app/assets/templates/comments/comment.jst.ejs
@@ -1,6 +1,8 @@
-<div class="comment-author">
-  <%= author.escape('username') %>:
-</div>
-<div class="comment-body">
-  <%= comment.escape('body') %>
+<div class="comment">
+  <div class="comment-author">
+    <%= author.escape('username') %>:
+  </div>
+  <div class="comment-body">
+    <%= comment.escape('body') %>
+  </div>
 </div>
