--- a/app/assets/templates/comments/comment_form.jst.ejs
+++ b/app/assets/templates/comments/comment_form.jst.ejs
@@ -1,7 +1,6 @@
 <div class='form-group'>
 	<form class='comment-form'>
-		Add a comment:
-		<input type='text' name='body' placeholder='Type your comment here...'>
-		<input type='submit' value='Add Comment!'>
+		<input class='comment-field' type='textarea' name='body' placeholder='Write a comment...'>
+		<input class='submit-comment' type='submit' value='Add Comment!'>
 	</form>
 </div>
