Working guest log in

--- a/app/assets/templates/comments/comment_form.jst.ejs
+++ b/app/assets/templates/comments/comment_form.jst.ejs
@@ -1,6 +1,6 @@
 <div class='form-group'>
 	<form class='comment-form'>
-		<input class='comment-field' type='textarea' name='body' placeholder='Write a comment...'>
+		<textarea class='comment-field' name='body' rows='2' placeholder='Write a comment...'></textarea>
 		<input class='submit-comment' type='submit' value='Add Comment!'>
 	</form>
 </div>
