--- a/app/assets/templates/nav_bar.jst.ejs
+++ b/app/assets/templates/nav_bar.jst.ejs
@@ -35,18 +35,13 @@
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li class='dropdown-item'><a href="javascript:void(0)" class="sign-out">Sign Out</a></li>
-            <!-- <li><a href="#" class="profile">Profile</a></li> -->
+
+            <li><a href="users/<%= window.TenGigg.CURRENT_USER.id %>" class="profile">Profile</a></li>
           </ul>
         </li>
 
       <% } else { %>
 
-        <!-- Demo Guest Log In -->
-        <!-- <li>
-          <button id='guest' class='btn btn-' name="button">Guest Log In</button>
-        </li> -->
-
-        <!-- Account Dropdown (not logged in) -->
         <li>
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
           aria-haspopup="true" aria-expanded="false"><%= window.TenGigg.CURRENT_USER.username %>
