--- a/app/assets/templates/nav_bar.jst.ejs
+++ b/app/assets/templates/nav_bar.jst.ejs
@@ -1,10 +1,13 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <ul class="nav navbar-nav navbar-left">
+
       <!-- Main Logo/Index -->
       <li class='mainIndex'><a class="navbar-brand" href="#/">TenGigg</a></li>
+
       <!-- Sort by Recent -->
       <li class='recentIndex'><a class='recent' href="#/">Recent</a></li>
+
       <!-- Categories Dropdown -->
       <li class='categories'>
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
@@ -36,7 +39,7 @@
           <ul class="dropdown-menu">
             <li class='dropdown-item'><a href="javascript:void(0)" class="sign-out">Sign Out</a></li>
 
-            <li><a href="users/<%= window.TenGigg.CURRENT_USER.id %>" class="profile">Profile</a></li>
+            <li><a href="#users/<%= window.TenGigg.CURRENT_USER.id %>" class="profile">Profile</a></li>
           </ul>
         </li>
 
