--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -85,9 +85,15 @@ a {
   margin: 30px;
   padding-left: 15px;
   padding-right: 15px;
+  background-color: white;
 }
 
-
+.full-page {
+  padding: 40px;
+  height: 900px;
+  width: 100%;
+  background-color: black;
+}
 
 //POST STUFF, INDEX + SHOW
 
