--- a/app/assets/templates/nav_bar.jst.ejs
+++ b/app/assets/templates/nav_bar.jst.ejs
@@ -44,7 +44,7 @@
         </li>
 
       <% } else { %>
-
+        <!-- Account Dropdown (not logged in) -->
         <li>
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
           aria-haspopup="true" aria-expanded="false"><%= window.TenGigg.CURRENT_USER.username %>
