--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,16 +1,18 @@
-<div class="form-container">
-	<form action='<%= users_url %>' method='post' class='auth-form'>
-		<%= auth_token %>
-		<h3>Sign Up</h3>
-		<div class="form-group">
-			<input type='text' class='form-control' placeholder='Username'
-				aria-describedby='basic-addon1' name='user[username]'>
-		</div>
+<div class="full-page">
+	<div class="form-container">
+		<form action='<%= users_url %>' method='post' class='auth-form'>
+			<%= auth_token %>
+			<h3>Sign Up</h3>
+			<div class="form-group">
+				<input type='text' class='form-control' placeholder='Username'
+					aria-describedby='basic-addon1' name='user[username]'>
+			</div>
 
-		<div class="form-group">
-			<input type='password' class='form-control' placeholder='Password'
-				aria-describedby='basic-addon1' name='user[password]'>
-		</div>
-		<input type='submit' value='Sign Up' class='auth-btn'>
-	</form>
+			<div class="form-group">
+				<input type='password' class='form-control' placeholder='Password'
+					aria-describedby='basic-addon1' name='user[password]'>
+			</div>
+			<input type='submit' value='Sign Up' class='auth-btn'>
+		</form>
+	</div>
 </div>
