--- a/app/assets/templates/posts/post_thumb_item.jst.ejs
+++ b/app/assets/templates/posts/post_thumb_item.jst.ejs
@@ -1,4 +1,4 @@
-<span>
+<span class='thumb-container'>
   <img src="<%= post.image().escape('thumbnail_url') %>" alt="" />
   <h5><%= post.escape('title') %></h5>
 </span>
