--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -120,6 +120,12 @@ div.full-page {
   padding-left: 30px;
 }
 
+//THUMB INDEX
+
+#thumb-index {
+	padding-top: 70px;
+}
+
 //MAIN INDEX
 
 ul.posts {
@@ -176,6 +182,10 @@ ul.category-select {
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
+}
+
+#close {
+	float: right;
 }
 
 // COMMENTS
