Last commit before major sidebar overhaul

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -102,6 +102,10 @@ div.full-page {
 
 //POST STUFF, INDEX + SHOW
 
+.post-title {
+	font-weight: bold;
+}
+
 .post-index-item {
 	padding-bottom: 20px;
 	padding-top: 10px;
@@ -124,6 +128,10 @@ div.full-page {
 
 #thumb-index {
 	padding-top: 70px;
+}
+
+.thumb-post-title {
+
 }
 
 //MAIN INDEX
