--- a/app/assets/templates/posts/main_index.jst.ejs
+++ b/app/assets/templates/posts/main_index.jst.ejs
@@ -3,7 +3,5 @@
 	<ul class='posts'></ul>
 </div>
 
-<div id='thumb-index' class='col-sm-4'>
-	<ul class='post-thumbs'></ul>
-</div>
+<div id='thumb-index' class='col-sm-4'></div>
 <div class='col-sm-1'></div>
