--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,3 +1,9 @@
 <div id="navbar"></div>
-<div id="root"></div>
-<div id="sidebar"></div>
+
+<div class='col-md-1'></div>
+
+<div id="root" class='col-md-6'></div>
+
+<div id="sidebar" class='col-md-4'></div>
+
+<div class='col-md-1'></div>
