--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,9 +1,15 @@
 <div id="navbar"></div>
 
-<div class='col-md-1'></div>
+<div class="row" id="header"></div>
 
-<div id="root" class='col-md-6'></div>
+<!-- <div class='col-md-1'></div> -->
 
-<div id="sidebar" class='col-md-4'></div>
+<div class="root row">
+  <div class='col-md-1'></div>
+  <div id="index" class='col-md-6'></div>
+  <div id="sidebar" class='col-md-4'></div>
+  <div class='col-md-1'></div>
+</div>
 
-<div class='col-md-1'></div>
+
+<!-- <div class='col-md-1'></div> -->
