More profile functionality, begin profile update capabilities

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -168,6 +168,8 @@ ul.category-select {
   column-gap: 20px;
 }
 
+//MODAL GENERAL
+
 .m-background {
   background-color: rgba(50, 50, 50, 0.5);
   position: fixed;
