--- a/app/assets/templates/nav_bar.jst.ejs
+++ b/app/assets/templates/nav_bar.jst.ejs
@@ -39,7 +39,7 @@
           <ul class="dropdown-menu">
             <li class='dropdown-item'><a href="javascript:void(0)" class="sign-out">Sign Out</a></li>
 
-            <li><a href="#users/<%= window.TenGigg.CURRENT_USER.id %>" class="profile">Profile</a></li>
+            <li><a href="#profile" class="profile">Profile</a></li>
           </ul>
         </li>
 
