--- a/app/assets/templates/users/user_header.jst.ejs
+++ b/app/assets/templates/users/user_header.jst.ejs
@@ -1,6 +1,7 @@
-<br>
+<br><br>
 <div id='user-splash' class="col-md-12">
   <h1><%= window.TenGigg.CURRENT_USER.username %></h1>
+  <button id="profile" type="button" class="btn btn-info">Edit Profile</button>
 </div>
 <div id='section-nav' class="col-md-12">
   <div class="col-md-2"></div>
