User profile pic, edit profile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -230,9 +230,10 @@ ul.category-select {
 
 #user-splash {
   background-color: #2E2E2E;
-  height: 250px;
+  height: 350px;
   text-align: center;
   color: white;
+	padding-top: 45px;
 }
 
 #section-nav {
