--- a/app/assets/templates/users/user_edit.jst.ejs
+++ b/app/assets/templates/users/user_edit.jst.ejs
@@ -2,14 +2,14 @@
 <div class="m-content">
   <h4>Edit Your Profile</h4><br>
   <form class="edit-profile">
-    <input type="text" name="title" placeholder="Username">
+    <input type="text" name="username" placeholder="Username">
     <br><br>
 
     <div class="thumb-container">
       <h5>Image:</h5>
     </div><br>
 
-    <button class='btn btn-default upload-button'>Upload Image</button>
+    <button class='btn btn-default upload-button'>Change Image</button>
 
     <br></br>
     <input type="submit" class="btn btn-info" value="Update Profile!">
