--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -5,10 +5,8 @@
 <!-- <div class='col-md-1'></div> -->
 
 <div class="root row">
-  <div class='col-md-1'></div>
-  <div id="index" class='col-md-6'></div>
-  <div id="sidebar" class='col-md-4'></div>
-  <div class='col-md-1'></div>
+  <div id="index" class="col-md-7"></div>
+  <div id="sidebar" class="col-md-5"></div>
 </div>
 
 
