--- a/app/assets/templates/comments/comment_form.jst.ejs
+++ b/app/assets/templates/comments/comment_form.jst.ejs
@@ -1,6 +1,6 @@
 <div class='form-group'>
 	<form class='comment-form'>
 		<textarea class='form-control comment-field' name='body' rows='2' placeholder='Write a comment...'></textarea>
-		<input class='btn btn-success submit-comment' type='submit' value='Add Comment!'>
+		<input class='btn btn-info submit-comment' type='submit' value='Add Comment!'>
 	</form>
 </div>
