--- a/app/assets/templates/posts/index_item.jst.ejs
+++ b/app/assets/templates/posts/index_item.jst.ejs
@@ -5,6 +5,14 @@
   </a>
 <% } %>
 <div class="post-stats">
+  <!-- Vote buttons -->
+  <span><button type="button" class="btn btn-success upvote" name="upvote">
+    <span class='glyphicon glyphicon-arrow-up'></span>
+  </button></span>
+  <span><button type="button" class="btn btn-danger downvote" name="downvote">
+    <span class='glyphicon glyphicon-arrow-down'></span>
+  </button></span>
+
   <span class='post-popularity'>Popularity: <%= post.escape("popularity") %></span>
   <span class='post-comments'>Comments: <%= post.comments().length %></span>
 </div>
