--- a/app/assets/templates/posts/post_thumb_item.jst.ejs
+++ b/app/assets/templates/posts/post_thumb_item.jst.ejs
@@ -1,4 +1,4 @@
-<a href="#posts/<%= post.escape("id") %>">
+<a href="#posts/<%= post.escape("id") %>" class="thumb-post-anchor">
   <img src="<%= post.image().escape('thumbnail_url') %>" class="thumb-image"/>
   <h5 class="thumb-post-title"><%= post.escape('title') %></h5>
 </a>
