--- a/app/assets/templates/posts/index_item.jst.ejs
+++ b/app/assets/templates/posts/index_item.jst.ejs
@@ -13,7 +13,7 @@
     <span class='glyphicon glyphicon-arrow-down'></span>
   </button></span>
 
-  <span class='post-popularity'>Popularity: <%= post.escape("popularity") %></span>
+  <span class='post-popularity'>Popularity: <%= post.score() %></span>
   <span class='post-comments'>Comments: <%= post.comments().length %></span>
 </div>
 <div class='index-item-bumper'></div>
