Working Profile sorts

--- a/app/assets/templates/comments/comment.jst.ejs
+++ b/app/assets/templates/comments/comment.jst.ejs
@@ -1,4 +1,7 @@
 <div class="comment">
+  <div class="author-image">
+    <%= author %>
+  </div>
   <div class="comment-author">
     <%= author.escape('username') %>:
   </div>
