--- a/app/assets/templates/users/user_header.jst.ejs
+++ b/app/assets/templates/users/user_header.jst.ejs
@@ -15,9 +15,9 @@
     <nav class='navbar nav'>
       <ul class='nav navbar-nav'>
 
-        <li><a href="javascript:void(0)" class='overview'>Overview</a></li>
-        <li><a href="javascript:void(0)" class='posts'>Posts</a></li>
-        <li><a href="javascript:void(0)" class='comments'>Comments</a></li>
+        <li><a href="#/profile">Overview</a></li>
+        <li><a href="#/profile/authored">Posts</a></li>
+        <li><a href="#/profile/commented">Comments</a></li>
 
       </ul>
     </nav>
